# Apuntes

./: .gitignore  README.md  _config.yml  index.html  renombrar_carpetas.py  style.css  subir_git.sh
documents/cuarto/segundo_cuatrimestre/metaheuristicas/trabajo_final/entrega/cec2017real/code/: CMakeLists.txt  cec17_common.h  run.sh  run_all.sh  sca.cpp  sca_ls  sca_ls.cpp  tacolab_10.xlsx  tacolab_30.xlsx
documents/cuarto/segundo_cuatrimestre/metaheuristicas/trabajo_final/entrega/cec2017real/code/results_asca/: results_10_50.txt  results_11_10.txt  results_13_30.txt  results_14_10.txt  results_14_30.txt  results_14_50.txt  results_15_30.txt  results_16_30.txt  results_17_10.txt  results_17_30.txt  results_18_10.txt  results_18_50.txt  results_19_10.txt  results_1_10.txt  results_1_30.txt  results_1_50.txt  results_20_30.txt  results_21_10.txt  results_22_30.txt  results_23_10.txt  results_23_50.txt  results_24_50.txt  results_25_10.txt  results_26_10.txt  results_26_30.txt  results_26_50.txt  results_27_30.txt  results_28_10.txt  results_28_30.txt  results_29_50.txt  results_30_10.txt  results_30_30.txt  results_3_10.txt  results_3_50.txt  results_4_10.txt  results_4_50.txt  results_5_10.txt  results_5_50.txt  results_6_10.txt  results_6_30.txt  (+8 more)
documents/cuarto/segundo_cuatrimestre/metaheuristicas/trabajo_final/entrega/cec2017real/code/results_sca/: results_10_10.txt  results_11_30.txt  results_11_50.txt  results_12_30.txt  results_13_30.txt  results_14_30.txt  results_15_10.txt  results_17_10.txt  results_18_50.txt  results_19_10.txt  results_19_30.txt  (+26 more)
(+3179 files in other folders)
